Node.prototype.baseURI should not be nullable

The definition of baseURI in Node.idl should be USVString.

BUG=711562

Review-Url: https://codereview.chromium.org/2831753002
Cr-Commit-Position: refs/heads/master@{#465791}

Former-commit-id: 0462cff6ac0ddd51d88e74eb2e356061bbe792b0